Update: sidebar is now available on mobile devices. Improvements have been made to SearchWiki.tsx file and compatibility issue on tablets has been solved

--- a/src/assets/Index.css
+++ b/src/assets/Index.css
@@ -315,3 +315,39 @@
         order: 2 !important;
     }
 }
+
+@media only screen and (max-width: 899px) {
+    .search-types {
+        position: relative;
+        overflow: auto;
+        white-space: nowrap;
+        scrollbar-width: none;
+        -ms-overflow-style: none;
+    }
+
+    .search-types::-webkit-scrollbar {
+        display: none;
+    }
+
+    .search-types .search-buttons {
+        display: flex;
+        font-size: smaller;
+    }
+
+    .artado-result-card .result-subtitle {
+        margin-left: 15px;
+    }
+
+    #responsive-first {
+        order: 1 !important;
+        margin-bottom: 50px;
+    }
+
+    #responsive-none {
+        display: none;
+    }
+
+    #responsive-end {
+        order: 2 !important;
+    }
+}
